--- a/EAR/.project
+++ b/EAR/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TentaKillerEAR</name>
+	<name>TentaKiller-EAR</name>
 	<comment></comment>
 	<projects>
 		<project>TentaKiller-Servlet</project>
