--- a/EAR/.project
+++ b/EAR/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>TentaKiller-Servlet</project>
+		<project>TentaKiller-Bean</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
