--- a/Servlet/WebContent/WEB-INF/web.xml
+++ b/Servlet/WebContent/WEB-INF/web.xml
@@ -4,4 +4,16 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  <servlet>
+	<servlet-name>JUnitEETestServlet</servlet-name>
+	<servlet-class>org.junitee.servlet.JUnitEEServlet</servlet-class>
+	<!--init-param>
+		<param-name>searchResources</param-name>
+		<param-value>allTests.jar</param-value>	
+	</init-param-->
+  </servlet>
+  <servlet-mapping>
+	<servlet-name>JUnitEETestServlet</servlet-name>
+	<url-pattern>/test/*</url-pattern>
+  </servlet-mapping>
 </web-app>
